--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
 <body>
   <div id="root"></div>
+  <script async src="https://www.instagram.com/embed.js"></script>
   <script type="module" src="/src/main.jsx"></script>
+
 </body>
 
 </html>
