--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta name="keywords"
     content="itel ka phone, itel, itel new model, itel cellphone, itel new mobile, itel mobile price, itel phone, itel phone price,itel new model price,itel cell phone" />
 
-
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="itel India | Best Smartphones, Televisions, Home Appliances " />
   <meta itemprop="description"
@@ -37,11 +36,64 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
   <link rel="manifest" href="/favicon_io/site.webmanifest">
-
-
 </head>
 
 <body>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+
+    })(window, document, 'script', 'dataLayer', 'GTM-55ZCCZFT');</script>
+
+  <!-- End Google Tag Manager -->
+
+  <!-- Google Tag Manager (noscript) -->
+
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-55ZCCZFT" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe>
+  </noscript>
+
+  <!-- End Google Tag Manager (noscript) -->
+
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+
+      n.queue = []; t = b.createElement(e); t.async = !0;
+
+      t.src = v; s = b.getElementsByTagName(e)[0];
+
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+
+      'https://connect.facebook.net/en_US/fbevents.js');
+
+    fbq('init', '1467157957350673');
+
+    fbq('track', 'PageView');
+
+  </script>
+
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1467157957350673&ev=PageView&noscript=1" />
+  </noscript>
+
+  <!-- End Meta Pixel Code -->
+
   <div id="root"></div>
   <script async src="https://www.instagram.com/embed.js"></script>
   <script type="module" src="/src/main.jsx"></script>
