--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
   <meta itemprop="name" content="itel India | Best Smartphones, Televisions, Home Appliances " />
   <meta itemprop="description"
     content="itel India is a leading and popular electronics brand for latest smartphones, televisions, home appliances and gadgets. We offer affordable prices for premium q" />
-  <meta itemprop="image" content="https://itell.netlify.app/itel.svg" />
+  <meta itemprop="image" content="https://itel-india.com/itel.svg" />
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://itell.netlify.app" />
+  <meta property="og:url" content="https://itel-india.com" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="itel India | Best Smartphones, Televisions, Home Appliances " />
   <meta property="og:description"
     content="itel India is a leading and popular electronics brand for latest smartphones, televisions, home appliances and gadgets. We offer affordable prices for premium q" />
-  <meta property="og:image" content="https://itell.netlify.app/itel.svg" />
+  <meta property="og:image" content="https://itel-india.com/itel.svg" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="itel India | Best Smartphones, Televisions, Home Appliances " />
   <meta name="twitter:description"
     content="itel India is a leading and popular electronics brand for latest smartphones, televisions, home appliances and gadgets. We offer affordable prices for premium q" />
-  <meta name="twitter:image" content="https://itell.netlify.app/itel.svg" />
+  <meta name="twitter:image" content="https://itel-india.com/itel.svg" />
 
   <!-- All the icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
