--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@
 
   </script>
 
+  <!-- Event snippet for Purchase conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-939548128/J_4ECMP2gYMaEOC7gcAD',
+      'value': 1.0,
+      'currency': 'USD',
+      'transaction_id': ''
+    });
+  </script>
+
+  <!-- Event snippet for Page View conversion page -->
+  <script>
+    gtag('event', 'conversion', {
+      'send_to': 'AW-939548128/vW2oCLah8YIaEOC7gcAD',
+      'value': 1.0,
+      'currency': 'USD'
+    });
+  </script>
+
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=1467157957350673&ev=PageView&noscript=1" />
   </noscript>
