--- a/index.html
+++ b/index.html
@@ -5,90 +5,66 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>itel India | Best Smartphones, Televisions, Home Appliances and Gadgets | Affordable Prices</title>
+
+  <!-- SEO Meta Tags -->
   <meta name="description"
     content="itel India is a leading and popular electronics brand for latest smartphones, televisions, home appliances and gadgets. We offer affordable prices for premium quality products." />
   <meta name="keywords"
-    content="itel ka phone, itel, itel new model, itel cellphone, itel new mobile, itel mobile price, itel phone, itel phone price,itel new model price,itel cell phone" />
+    content="itel ka phone, itel, itel new model, itel cellphone, itel new mobile, itel mobile price, itel phone, itel phone price, itel new model price, itel cell phone" />
 
-  <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="itel India | Best Smartphones, Televisions, Home Appliances " />
+  <!-- Schema.org Markup -->
+  <meta itemprop="name" content="itel India | Best Smartphones, Televisions, Home Appliances" />
   <meta itemprop="description"
-    content="itel India is a leading and popular electronics brand for latest smartphones, televisions, home appliances and gadgets. We offer affordable prices for premium q" />
+    content="itel India is a leading and popular electronics brand for latest smartphones, televisions, home appliances and gadgets. We offer affordable prices for premium quality products." />
   <meta itemprop="image" content="https://itel-india.com/itel.svg" />
 
-  <!-- Facebook Meta Tags -->
+  <!-- Open Graph / Facebook Meta Tags -->
   <meta property="og:url" content="https://itel-india.com" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="itel India | Best Smartphones, Televisions, Home Appliances " />
+  <meta property="og:title" content="itel India | Best Smartphones, Televisions, Home Appliances" />
   <meta property="og:description"
-    content="itel India is a leading and popular electronics brand for latest smartphones, televisions, home appliances and gadgets. We offer affordable prices for premium q" />
+    content="itel India is a leading and popular electronics brand for latest smartphones, televisions, home appliances and gadgets. We offer affordable prices for premium quality products." />
   <meta property="og:image" content="https://itel-india.com/itel.svg" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="itel India | Best Smartphones, Televisions, Home Appliances " />
+  <meta name="twitter:title" content="itel India | Best Smartphones, Televisions, Home Appliances" />
   <meta name="twitter:description"
-    content="itel India is a leading and popular electronics brand for latest smartphones, televisions, home appliances and gadgets. We offer affordable prices for premium q" />
+    content="itel India is a leading and popular electronics brand for latest smartphones, televisions, home appliances and gadgets. We offer affordable prices for premium quality products." />
   <meta name="twitter:image" content="https://itel-india.com/itel.svg" />
 
-  <!-- All the icons -->
+  <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
   <link rel="manifest" href="/favicon_io/site.webmanifest">
-</head>
 
-<body>
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
-
           new Date().getTime(), event: 'gtm.js'
       }); var f = d.getElementsByTagName(s)[0],
-
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-T52XBJL');</script>
+  <!-- End Google Tag Manager -->
 
-    })(window, document, 'script', 'dataLayer', 'GTM-55ZCCZFT');</script>
+  <meta name="google-site-verification" content="q3wC08_ZzD-U8Tv4TCymeOZNqxmwgmf37kDJVS9Qcvo" />
 
-  <!-- End Google Tag Manager -->
+</head>
 
-  <!-- Google Tag Manager (noscript) -->
+<body>
 
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-55ZCCZFT" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe>
-  </noscript>
 
-  <!-- End Google Tag Manager (noscript) -->
 
   <!-- Meta Pixel Code -->
-  <script>
-    !function (f, b, e, v, n, t, s) {
-      if (f.fbq) return; n = f.fbq = function () {
-        n.callMethod ?
-          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-      };
+  <script>!function (f, b, e, v, n, t, s) { if (f.fbq) return; n = f.fbq = function () { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) }; if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0; t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s) }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '1467157957350673'); fbq('track', 'PageView');</script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1467157957350673&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 
-      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
-
-      n.queue = []; t = b.createElement(e); t.async = !0;
-
-      t.src = v; s = b.getElementsByTagName(e)[0];
-
-      s.parentNode.insertBefore(t, s)
-    }(window, document, 'script',
-
-      'https://connect.facebook.net/en_US/fbevents.js');
-
-    fbq('init', '1467157957350673');
-
-    fbq('track', 'PageView');
-
-  </script>
-
-  <!-- Event snippet for Purchase conversion page -->
+  <!-- Google Ads Conversion Tracking -->
   <script>
     gtag('event', 'conversion', {
       'send_to': 'AW-939548128/J_4ECMP2gYMaEOC7gcAD',
@@ -96,10 +72,6 @@
       'currency': 'USD',
       'transaction_id': ''
     });
-  </script>
-
-  <!-- Event snippet for Page View conversion page -->
-  <script>
     gtag('event', 'conversion', {
       'send_to': 'AW-939548128/vW2oCLah8YIaEOC7gcAD',
       'value': 1.0,
@@ -107,14 +79,18 @@
     });
   </script>
 
-  <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=1467157957350673&ev=PageView&noscript=1" />
-  </noscript>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T52XBJL" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
-  <!-- End Meta Pixel Code -->
 
   <div id="root"></div>
+
+  <!-- Instagram Embed -->
   <script async src="https://www.instagram.com/embed.js"></script>
+
+  <!-- Main JavaScript File -->
   <script type="module" src="/src/main.jsx"></script>
 
 </body>
